--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ body {
     background: transparent;
     text-align: center;
     color: #68add6;
+}
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
 
+input[type=number] {
+    -moz-appearance:textfield;
 }
